--- a/codeforces/.vscode/settings.json
+++ b/codeforces/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.ejs": "html",
         "*.tsx": "typescriptreact",
         "iostream": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "ostream": "cpp"
     }
 }
